--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <span class="start-title">Ready to start the show?</span>
             <span class="start-header">Click the ticket to start the game!</span>
             <div class="full-ticket" id="start-button">
-                <button class="left-ticket-btn"><img src="ASSETS/START/left-ticket.PNG" class="left-ticket-img" id="left-ticket-img"></button>
-                <button class="right-ticket-btn"><img src="ASSETS/START/right-ticket.PNG" class="right-ticket-img" id="right-ticket-img"></button>
+                <button class="left-ticket-btn"><img src="ASSETS/START/left-ticket.png" class="left-ticket-img" id="left-ticket-img"></button>
+                <button class="right-ticket-btn"><img src="ASSETS/START/right-ticket.png" class="right-ticket-img" id="right-ticket-img"></button>
             </div>
         </div>
 
