--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="overlay end-screen" id="pass-end-screen">
             <img src="ASSETS/token.png" class="token-img">
             <div class="end-message">Congratulations! You have earned the</div>
-            <div class="end-title"> INCLUSIVITY BADGE!</div>
-            <div class="end-message"> The secret code for the next Act is UNITY! The show has ended and you can click the button below to head back to the tent!</div>
+            <div class="end-title"> FASHION ICON BADGE!</div>
+            <div class="end-message"> The secret code for the next Act is <b>ETIQUETTE</b> The show has ended and you can click the button below to head back to the tent!</div>
             <a href="https://interaktiv.benilde.edu.ph/?page_id=12809"><button class="menu-btn" id="menu-btn"><img class="menu-btn-img" src="ASSETS/menu-btn.png"></button></a>
         </div>
 
